# middleware/validate.js
@@ -1,27 +1,26 @@
 const validator = require('../helpers/validate');
 
-const saveCar = (req, res, next) => {
+const saveMovie = (req, res, next) => {
     const validationRule = {
-        brand: 'required|string',
-        model: 'required|string',
-        year: 'required|integer',
-        color: 'required|string',
-        fuelType: 'required|string',
-        mileage: 'required|integer',
-        features: 'array' // Ensure it is an array
+      title: 'required|string',
+      releaseDate: 'required|string',
+      description: 'required|string',
+      director: 'required|string',
+      genre: 'required|string',
+      rating: 'required|string'
     };
     validator(req.body, validationRule, {}, (err, status) => {
-        if (!status) {
-            res.status(412).send({
-                success: false,
-                message: 'Validation failed',
-                data: err
-            });
-        } else {
-            next();
-        }
+      if (!status) {
+        res.status(412).send({
+          success: false,
+          message: 'Validation failed',
+          data: err
+        });
+      } else {
+        next();
+      }
     });
-};
+  };
 
 const saveMotorcycle = (req, res, next) => {
     const validationRule = {
@@ -45,5 +44,5 @@ const saveMotorcycle = (req, res, next) => {
 };
 
 module.exports = {
-    saveCar, saveMotorcycle
+    saveMovie, saveMotorcycle
 };
